--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
   </header>
   <main>
-    
+
   </main>
 
   <footer></footer>
@@ -86,27 +86,61 @@
     <div class="modal-container">
       <ul class="modal-list">
         <li class="modal-item">
-          <a class="modal-link" href="#home">Home</a>
+          <a class="modal-link" href="#Book">Book</a>
         </li>
         <li class="modal-item">
-          <a class="modal-link" href="#overview">Game Overview</a>
+          <a class="modal-link" href="#Help">Help</a>
         </li>
         <li class="modal-item">
-          <a class="modal-link" href="#characters">Character Spotlight</a>
+          <a class="modal-link" href="#FAQ">FAQ</a>
         </li>
         <li class="modal-item">
-          <a class="modal-link" href="#map">Interactive Game Map</a>
+          <a class="modal-link" href="#Rental Policies">Rental Policies</a>
         </li>
         <li class="modal-item">
-          <a class="modal-link" href="#gallery">Community Fan</a>
-        </li>
-        <li class="modal-item">
-          <a class="modal-link" href="#leaderboard">Player Rankings</a>
-        </li>
-        <li class="modal-item">
-          <a class="modal-link" href="#soundtrack">Soundtrack Preview</a>
+          <a class="modal-link" href="#Help Center">Help Center</a>
         </li>
       </ul>
+      <div class="modal-bottom">
+        <button class="modal-btn">Sign In
+          <svg class="modal-svg">
+            <use href="./public/svg/icons.svg#icon-modal"></use>
+          </svg>
+        </button>
+        <div class="modal-wrapper">
+          <div class="modal-info">
+            <svg class="svg">
+              <use href="./public/svg/icons.svg#icon-phone"></use>
+            </svg>
+            <a href="tel:+380501234567">+123 456 7890</a>
+          </div>
+          <div class="modal-language">
+            <button class="header-language-btn">
+              <span class="selected-language">EN</span>
+              <svg class="svg">
+                <use href="./public/svg/icons.svg#icon-arrow-down"></use>
+              </svg>
+            </button>
+            <ul class="header-language-list">
+              <li data-lang="UK">
+                <svg class="svg">
+                  <use href="./public/svg/icons.svg#icon-flags-uk"></use>
+                </svg>Ukranian
+              </li>
+              <li data-lang="EN">
+                <svg class="svg">
+                  <use href="./public/svg/icons.svg#icon-flag-en"></use>
+                </svg>English
+              </li>
+              <li data-lang="CR">
+                <svg class="svg">
+                  <use href="./public/svg/icons.svg#icon-flag-cr"></use>
+                </svg>Croatian
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <script type="module" src="/src/js/main.js"></script>
