--- a/index.html
+++ b/index.html
@@ -77,7 +77,35 @@
     </div>
   </header>
   <main>
-
+    <section class="contact">
+      <div class="contact-container">
+        <div class="contact-wrapper">
+          <div class="contact-fotos">
+            <picture class="contact-foto1">
+              <source srcset="
+            ./public/img/contact/foto.png      1x,
+            ./public/img/contact/foto@2x.png   2x " />
+              <img src="./public/img/contact/foto.png" alt="foto" />
+            </picture>
+            <picture class="contact-foto2">
+              <source srcset="
+            ./public/img/contact/foto2.png      1x,
+            ./public/img/contact/foto2@2x.png   2x " />
+              <img src="./public/img/contact/foto2.png" alt="foto" />
+            </picture>
+            <picture class="contact-foto3">
+              <source srcset="
+            ./public/img/contact/foto3.png      1x,
+            ./public/img/contact/foto3@2x.png   2x " />
+              <img src="./public/img/contact/foto3.png" alt="foto" />
+            </picture>
+          </div>
+          <h3 class="contact-title">Still have questions?</h3>
+          <p class="contact-text">Can’t find the answer you’re looking for? Please chat to our friendly team.</p>
+          <button class="contact-btn">Contact Us</button>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer></footer>
@@ -86,19 +114,19 @@
     <div class="modal-container">
       <ul class="modal-list">
         <li class="modal-item">
-          <a class="modal-link" href="#Book">Book</a>
+          <a class="modal-link" href="#book">Book</a>
         </li>
         <li class="modal-item">
-          <a class="modal-link" href="#Help">Help</a>
+          <a class="modal-link" href="#help">Help</a>
         </li>
         <li class="modal-item">
-          <a class="modal-link" href="#FAQ">FAQ</a>
+          <a class="modal-link" href="#fAQ">FAQ</a>
         </li>
         <li class="modal-item">
-          <a class="modal-link" href="#Rental Policies">Rental Policies</a>
+          <a class="modal-link" href="#rental Policies">Rental Policies</a>
         </li>
         <li class="modal-item">
-          <a class="modal-link" href="#Help Center">Help Center</a>
+          <a class="modal-link" href="#help Center">Help Center</a>
         </li>
       </ul>
       <div class="modal-bottom">
