--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@
           <div class="contact-fotos">
             <picture class="contact-foto1">
               <source srcset="
-            ./public/img/contact/foto.png      1x,
-            ./public/img/contact/foto@2x.png   2x " />
-              <img src="./public/img/contact/foto.png" alt="foto" />
+            /img/contact/foto.png      1x,
+            /img/contact/foto@2x.png   2x " />
+              <img src="/img/contact/foto.png" alt="foto" />
             </picture>
             <picture class="contact-foto2">
               <source srcset="
-            ./public/img/contact/foto2.png      1x,
-            ./public/img/contact/foto2@2x.png   2x " />
-              <img src="./public/img/contact/foto2.png" alt="foto" />
+            /img/contact/foto2.png      1x,
+            /img/contact/foto2@2x.png   2x " />
+              <img src="/img/contact/foto2.png" alt="foto" />
             </picture>
             <picture class="contact-foto3">
               <source srcset="
-            ./public/img/contact/foto3.png      1x,
-            ./public/img/contact/foto3@2x.png   2x " />
-              <img src="./public/img/contact/foto3.png" alt="foto" />
+            /img/contact/foto3.png      1x,
+            /img/contact/foto3@2x.png   2x " />
+              <img src="/img/contact/foto3.png" alt="foto" />
             </picture>
           </div>
           <h3 class="contact-title">Still have questions?</h3>
@@ -108,7 +108,35 @@
     </section>
   </main>
 
-  <footer></footer>
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-subscribe">
+        <div class="footer-container-logo">
+          <a href="./index.html">
+            <svg class="footer-logo">
+              <use href="./public/svg/icons.svg#icon-logo"></use>
+            </svg>
+          </a>
+          <p class="footer-text">Your Trusted Ride Awaits.</p>
+        </div>
+        <div class="footer-wrapper">
+          <form class="footer-form">
+            <label for="email">Stay up to date</label>
+            <input type="email" id="email" placeholder="Enter your email" required>
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
+      </div>
+      <div class="footer-rules">
+        <p>© 2077 Untitled UI. All rights reserved.</p>
+        <div class="footet-policy">
+          <a href="#">Terms</a>
+          <a href="#">Privacy</a>
+          <a href="#">Cookies</a>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <div class="modal">
     <div class="modal-container">
