--- a/index.html
+++ b/index.html
@@ -97,96 +97,222 @@
         </div>
         <div class="progress-wrapper">
           <picture class="progres-car">
-          <source srcset="
+            <source srcset="
           /img/order/car.png 1x,
           /img/order/car@2x.png 2x" />
-          <img src="/img/order/car.png" alt="car" />
-         </picture>
-         <div class="progress-text">
-          <h3>Volkswagen Touareg</h3>
-          <p class="progress-p1">or similar Intermediate</p>
-          <p class="progress-p2">1 rental day</p>
-         </div>
+            <img src="/img/order/car.png" alt="car" />
+          </picture>
+          <div class="progress-text">
+            <h3>Volkswagen Touareg</h3>
+            <p class="progress-p1">or similar Intermediate</p>
+            <p class="progress-p2">1 rental day</p>
+          </div>
         </div>
       </div>
     </section>
     <section class="order">
       <div class="order-container">
-        <div class="order-wraper">
-          <picture>
-            <source srcset="
-              /img/order/desk.png 1x,
-              /img/order/desk@2x.png 2x
-              " media="(min-width: 1440px)" />
-            <source srcset="
-              /img/order/tab.png 1x,
-              /img/order/tab@2x.png 2x
-              " media="(min-width: 768px)" />
-            <source srcset="
-              /img/order/mob.png 1x,
-              /img/order/mob@2x.png 2x
-              " media="(min-width: 320px)" />
-            <img src="/img/order/mob.png" alt="car" />
-          </picture>
-          <h3 class="order-title">Volkswagen Touareg</h3>
-          <p class="order-text">32,98 EUR</p>
-          <ul class="order-list">Included in Price
-            <li>
-              <svg width="16" height="16">
-                <use href="./public/svg/icons.svg#icon-check"></use>
-              </svg>
-              <span>Airport/City Fee</span>
-            </li>
-            <li>
-              <svg width="16" height="16">
-                <use href="./public/svg/icons.svg#icon-check"></use>
-              </svg>
-              <span>Local Tax</span>
-            </li>
-            <li>
-              <svg width="16" height="16">
-                <use href="./public/svg/icons.svg#icon-check"></use>
-              </svg>
-              <span>Registration Fee</span>
-            </li>
-            <li>
-              <svg width="16" height="16">
-                <use href="./public/svg/icons.svg#icon-check"></use>
-              </svg>
-              <span>Unlimited Mileage</span>
-            </li>
-          </ul>
-          <ul class="order-list2">
-            <li>
-              <svg width="16" height="16">
-                <use href="./public/svg/icons.svg#icon-car-doors"></use>
-              </svg>
-              <span>5 Doors</span>
-            </li>
-            <li>
-              <svg width="16" height="16">
-                <use href="./public/svg/icons.svg#icon-luggage"></use>
-              </svg>
-              <span>3 Suitcase</span>
-            </li>
-            <li>
-              <svg width="16" height="16">
-                <use href="./public/svg/icons.svg#icon-manual"></use>
-              </svg>
-              <span>5 Manual</span>
-            </li>
-            <li>
-              <svg width="16" height="16">
-                <use href="./public/svg/icons.svg#icon-users"></use>
-              </svg>
-              <span>5 Passengers</span>
-            </li>
-          </ul>
-          <button class="order-btn">Proceed to Booking</button>
+        <div class="order-bg">
+          <div class="order-wraper">
+            <picture class="order-picture">
+              <source srcset="
+                /img/order/desk.png 1x,
+                /img/order/desk@2x.png 2x
+                " media="(min-width: 1440px)" />
+              <source srcset="
+                /img/order/tab.png 1x,
+                /img/order/tab@2x.png 2x
+                " media="(min-width: 768px)" />
+              <source srcset="
+                /img/order/mob.png 1x,
+                /img/order/mob@2x.png 2x
+                " media="(min-width: 320px)" />
+              <img src="/img/order/mob.png" alt="car" />
+            </picture>
+            <h3 class="order-title">Volkswagen Touareg</h3>
+            <p class="order-text">32,98 <span>EUR/day</span></p>
+            <h4 class="order-h4">Included in Price</h4>
+            <ul class="order-list">
+              <li>
+                <svg width="16" height="16">
+                  <use href="./public/svg/icons.svg#icon-check"></use>
+                </svg>
+                <span>Airport/City Fee</span>
+              </li>
+              <li>
+                <svg width="16" height="16">
+                  <use href="./public/svg/icons.svg#icon-check"></use>
+                </svg>
+                <span>Local Tax</span>
+              </li>
+              <li>
+                <svg width="16" height="16">
+                  <use href="./public/svg/icons.svg#icon-check"></use>
+                </svg>
+                <span>Registration Fee</span>
+              </li>
+              <li>
+                <svg width="16" height="16">
+                  <use href="./public/svg/icons.svg#icon-check"></use>
+                </svg>
+                <span>Unlimited Mileage</span>
+              </li>
+            </ul>
+            <ul class="order-list2">
+              <li>
+                <svg width="16" height="16">
+                  <use href="./public/svg/icons.svg#icon-car-doors"></use>
+                </svg>
+                <span>5 Doors</span>
+              </li>
+              <li>
+                <svg width="16" height="16">
+                  <use href="./public/svg/icons.svg#icon-luggage"></use>
+                </svg>
+                <span>3 Suitcase</span>
+              </li>
+              <li>
+                <svg width="16" height="16">
+                  <use href="./public/svg/icons.svg#icon-manual"></use>
+                </svg>
+                <span>5 Manual</span>
+              </li>
+              <li>
+                <svg width="16" height="16">
+                  <use href="./public/svg/icons.svg#icon-users"></use>
+                </svg>
+                <span>5 Passengers</span>
+              </li>
+            </ul>
+            <button class="order-btn">Proceed to Booking</button>
+          </div>
+
+          <div class="order-add">
+            <h3 class="order-add-title">Add on extras</h3>
+            <ul class="order-add-list">
+              <li class="order-add-item">
+                <div class="order-add-wrapper">
+                  <svg width="20" height="20">
+                    <use href="./public/svg/icons.svg#icon-infinity"></use>
+                  </svg>  
+                <p class="order-add-item-p1">Unlimited Mileage</p>
+                <p class="order-add-item-p2">15 EUR</p>
+                </div>
+                <div class="order-add-item-div">
+                  <svg width="24" height="24">
+                    <use href="./public/svg/icons.svg#icon-plus"></use>
+                  </svg>
+                </div>
+              </li>
+              <li class="order-add-item">
+                <div class="order-add-wrapper">
+                  <svg width="20" height="20">
+                    <use href="./public/svg/icons.svg#icon-globe"></use>
+                  </svg>  
+                <p class="order-add-item-p1">Cross-border Fee</p>
+                <p class="order-add-item-p2">15 EUR</p>
+                </div>
+                <div class="order-add-item-div">
+                  <svg width="24" height="24">
+                    <use href="./public/svg/icons.svg#icon-plus"></use>
+                  </svg>
+                </div>
+              </li>
+              <li class="order-add-item">
+                <div class="order-add-wrapper">
+                  <svg width="20" height="20">
+                    <use href="./public/svg/icons.svg#icon-petrol"></use>
+                  </svg>  
+                <p class="order-add-item-p1">Full Tank Service</p>
+                <p class="order-add-item-p2">15 EUR</p>
+                </div>
+                <div class="order-add-item-div">
+                  <svg width="24" height="24">
+                    <use href="./public/svg/icons.svg#icon-plus"></use>
+                  </svg>
+                </div>
+              </li>
+              <li class="order-add-item">
+                <div class="order-add-wrapper">
+                  <svg width="20" height="20">
+                    <use href="./public/svg/icons.svg#icon-baby"></use>
+                  </svg>  
+                <p class="order-add-item-p1">Child Seat</p>
+                <p class="order-add-item-p2">15 EUR</p>
+                </div>
+                <div class="order-add-item-div">
+                  <svg width="24" height="24">
+                    <use href="./public/svg/icons.svg#icon-plus"></use>
+                  </svg>
+                </div>
+              </li>
+              <li class="order-add-item">
+                <div class="order-add-wrapper">
+                  <svg width="20" height="20">
+                    <use href="./public/svg/icons.svg#icon-navigation"></use>
+                  </svg>  
+                <p class="order-add-item-p1">GPS Navigation System</p>
+                <p class="order-add-item-p2">15 EUR</p>
+                </div>
+                <div class="order-add-item-div">
+                  <svg width="24" height="24">
+                    <use href="./public/svg/icons.svg#icon-plus"></use>
+                  </svg>
+                </div>
+              </li>
+              <li class="order-add-item">
+                <div class="order-add-wrapper">
+                  <svg width="20" height="20">
+                    <use href="./public/svg/icons.svg#icon-wifi"></use>
+                  </svg>  
+                <p class="order-add-item-p1">Wi-Fi Hotspot</p>
+                <p class="order-add-item-p2">15 EUR</p>
+                </div>
+                <div class="order-add-item-div">
+                  <svg width="24" height="24">
+                    <use href="./public/svg/icons.svg#icon-plus"></use>
+                  </svg>
+                </div>
+              </li>
+              <li class="order-add-item">
+                <div class="order-add-wrapper">
+                  <svg width="20" height="20">
+                    <use href="./public/svg/icons.svg#icon-driver"></use>
+                  </svg>  
+                <p class="order-add-item-p1">Additional Driver</p>
+                <p class="order-add-item-p2">15 EUR</p>
+                </div>
+                <div class="order-add-item-div">
+                  <svg width="24" height="24">
+                    <use href="./public/svg/icons.svg#icon-plus"></use>
+                  </svg>
+                </div>
+              </li>
+              <li class="order-add-item">
+                <div class="order-add-wrapper">
+                  <svg width="20" height="20">
+                    <use href="./public/svg/icons.svg#icon-headphones"></use>
+                  </svg>  
+                <p class="order-add-item-p1">Roadside waiver</p>
+                <p class="order-add-item-p2">15 EUR</p>
+                </div>
+                <div class="order-add-item-div">
+                  <svg width="24" height="24">
+                    <use href="./public/svg/icons.svg#icon-plus"></use>
+                  </svg>
+                </div>
+              </li>
+            </ul>
+            <button class="order-add-btn">Continue</button>
+          </div>
+
+          
+
+
         </div>
       </div>
     </section>
-    
+
 
     <section class="contact">
       <div class="contact-container">
