--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section class="progress">
       <div class="progress-container">
         <div class="progress-steps">
-          <span class="circle active"></span>
+          <span class="circle activ"></span>
           <span class="circle"></span>
           <span class="circle"></span>
           <span class="circle"></span>
@@ -110,6 +110,7 @@
         </div>
       </div>
     </section>
+
     <section class="order">
       <div class="order-container">
         <div class="order-bg">
@@ -190,15 +191,15 @@
           <div class="order-add">
             <h3 class="order-add-title">Add on extras</h3>
             <ul class="order-add-list">
-              <li class="order-add-item">
+              <li class="order-add-item order-add-active">
                 <div class="order-add-wrapper">
                   <svg width="20" height="20">
                     <use href="./public/svg/icons.svg#icon-infinity"></use>
-                  </svg>  
-                <p class="order-add-item-p1">Unlimited Mileage</p>
-                <p class="order-add-item-p2">15 EUR</p>
+                  </svg>
+                  <p class="order-add-item-p1">Unlimited Mileage</p>
+                  <p class="order-add-item-p2">15 EUR</p>
                 </div>
-                <div class="order-add-item-div">
+                <div class="order-add-item-div order-add-item-div-active">
                   <svg width="24" height="24">
                     <use href="./public/svg/icons.svg#icon-plus"></use>
                   </svg>
@@ -208,9 +209,9 @@
                 <div class="order-add-wrapper">
                   <svg width="20" height="20">
                     <use href="./public/svg/icons.svg#icon-globe"></use>
-                  </svg>  
-                <p class="order-add-item-p1">Cross-border Fee</p>
-                <p class="order-add-item-p2">15 EUR</p>
+                  </svg>
+                  <p class="order-add-item-p1">Cross-border Fee</p>
+                  <p class="order-add-item-p2">15 EUR</p>
                 </div>
                 <div class="order-add-item-div">
                   <svg width="24" height="24">
@@ -222,9 +223,9 @@
                 <div class="order-add-wrapper">
                   <svg width="20" height="20">
                     <use href="./public/svg/icons.svg#icon-petrol"></use>
-                  </svg>  
-                <p class="order-add-item-p1">Full Tank Service</p>
-                <p class="order-add-item-p2">15 EUR</p>
+                  </svg>
+                  <p class="order-add-item-p1">Full Tank Service</p>
+                  <p class="order-add-item-p2">15 EUR</p>
                 </div>
                 <div class="order-add-item-div">
                   <svg width="24" height="24">
@@ -236,9 +237,9 @@
                 <div class="order-add-wrapper">
                   <svg width="20" height="20">
                     <use href="./public/svg/icons.svg#icon-baby"></use>
-                  </svg>  
-                <p class="order-add-item-p1">Child Seat</p>
-                <p class="order-add-item-p2">15 EUR</p>
+                  </svg>
+                  <p class="order-add-item-p1">Child Seat</p>
+                  <p class="order-add-item-p2">15 EUR</p>
                 </div>
                 <div class="order-add-item-div">
                   <svg width="24" height="24">
@@ -250,9 +251,9 @@
                 <div class="order-add-wrapper">
                   <svg width="20" height="20">
                     <use href="./public/svg/icons.svg#icon-navigation"></use>
-                  </svg>  
-                <p class="order-add-item-p1">GPS Navigation System</p>
-                <p class="order-add-item-p2">15 EUR</p>
+                  </svg>
+                  <p class="order-add-item-p1">GPS Navigation System</p>
+                  <p class="order-add-item-p2">15 EUR</p>
                 </div>
                 <div class="order-add-item-div">
                   <svg width="24" height="24">
@@ -264,9 +265,9 @@
                 <div class="order-add-wrapper">
                   <svg width="20" height="20">
                     <use href="./public/svg/icons.svg#icon-wifi"></use>
-                  </svg>  
-                <p class="order-add-item-p1">Wi-Fi Hotspot</p>
-                <p class="order-add-item-p2">15 EUR</p>
+                  </svg>
+                  <p class="order-add-item-p1">Wi-Fi Hotspot</p>
+                  <p class="order-add-item-p2">15 EUR</p>
                 </div>
                 <div class="order-add-item-div">
                   <svg width="24" height="24">
@@ -278,9 +279,9 @@
                 <div class="order-add-wrapper">
                   <svg width="20" height="20">
                     <use href="./public/svg/icons.svg#icon-driver"></use>
-                  </svg>  
-                <p class="order-add-item-p1">Additional Driver</p>
-                <p class="order-add-item-p2">15 EUR</p>
+                  </svg>
+                  <p class="order-add-item-p1">Additional Driver</p>
+                  <p class="order-add-item-p2">15 EUR</p>
                 </div>
                 <div class="order-add-item-div">
                   <svg width="24" height="24">
@@ -292,9 +293,9 @@
                 <div class="order-add-wrapper">
                   <svg width="20" height="20">
                     <use href="./public/svg/icons.svg#icon-headphones"></use>
-                  </svg>  
-                <p class="order-add-item-p1">Roadside waiver</p>
-                <p class="order-add-item-p2">15 EUR</p>
+                  </svg>
+                  <p class="order-add-item-p1">Roadside waiver</p>
+                  <p class="order-add-item-p2">15 EUR</p>
                 </div>
                 <div class="order-add-item-div">
                   <svg width="24" height="24">
@@ -306,13 +307,145 @@
             <button class="order-add-btn">Continue</button>
           </div>
 
-          
+          <div class="insurance">
+            <h3 class="insurance-title">Insurance</h3>
+            <div class="insurance-wrapper">
+              <div class="insurance-item">
+                <p class="insurance-p">No Insurance</p>
+                <h2 class="insurance-h2">Free</h2>
+                <p class="insurance-p2">Important Notice:</p>
+                <ul class="insurance-list">
+                  <li class="insurance-li">
+                    <svg width="16" height="16" style="flex-shrink: 0;">
+                      <use href="./public/svg/icons.svg#icon-alert"></use>
+                    </svg>
+                    <span>You are fully responsible for any damage to the vehicle.</span>
+                  </li>
+                  <li class="insurance-li">
+                    <svg width="16" height="16" style="flex-shrink: 0;">
+                      <use href="./public/svg/icons.svg#icon-alert"></use>
+                    </svg>
+                    <span>Full repair costs will be charged in case of an accident or damage (no financial
+                      limit).</span>
+                  </li>
+                </ul>
+                <p class="insurance-p3">We strongly recommend choosing one of the insurance options to ensure a
+                  worry-free journey.</p>
+              </div>
+              <div class="insurance-item insurance-active">
+                <p class="insurance-p">Basic Insurance</p>
+                <h2 class="insurance-h2">15 EUR/day</h2>
+                <ul class="insurance-list">
+                  <li class="insurance-li">
+                    <svg width="16" height="16" style="flex-shrink: 0;">
+                      <use href="./public/svg/icons.svg#icon-check"></use>
+                    </svg>
+                    <span>Coverage for vehicle damage in case of an accident (with excess).</span>
+                  </li>
+                  <li class="insurance-li">
+                    <svg width="16" height="16" style="flex-shrink: 0;">
+                      <use href="./public/svg/icons.svg#icon-check"></use>
+                    </svg>
+                    <span>Limited financial liability with a deductible/excess.</span>
+                  </li>
+                  <li class="insurance-li">
+                    <svg width="16" height="16" style="flex-shrink: 0;">
+                      <use href="./public/svg/icons.svg#icon-check"></use>
+                    </svg>
+                    <span>Partial coverage for car body damages (does not cover tires, windows, roof, or
+                      undercarriage).</span>
+                  </li>
+                </ul>
+              </div>
+              <div class="insurance-item">
+                <p class="insurance-p">Comprehensive Insurance</p>
+                <h2 class="insurance-h2">25 EUR/day</h2>
+                <ul class="insurance-list">
+                  <li class="insurance-li">
+                    <svg width="16" height="16" style="flex-shrink: 0;">
+                      <use href="./public/svg/icons.svg#icon-ok"></use>
+                    </svg>
+                    <span>Full coverage for all damages (including tires, windows, roof, and undercarriage).</span>
+                  </li>
+                  <li class="insurance-li">
+                    <svg width="16" height="16" style="flex-shrink: 0;">
+                      <use href="./public/svg/icons.svg#icon-ok"></use>
+                    </svg>
+                    <span>Theft protection.</span>
+                  </li>
+                  <li class="insurance-li">
+                    <svg width="16" height="16" style="flex-shrink: 0;">
+                      <use href="./public/svg/icons.svg#icon-ok"></use>
+                    </svg>
+                    <span>No deductible/excess (or minimal excess).</span>
+                  </li>
+                  <li class="insurance-li">
+                    <svg width="16" height="16" style="flex-shrink: 0;">
+                      <use href="./public/svg/icons.svg#icon-ok"></use>
+                    </svg>
+                    <span>Roadside assistance in case of breakdowns or accidents.</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <button class="order-add-btn">Continue</button>
+          </div>
+        </div>
 
+        <div class="confirming">
+          <h2 class="confirming-title">Confirming Order</h2>
+          <form class="confirming-form">
+            <div class="confirming-info">
+              <label for="first-name">First Name <span>*</span></label>
+              <input id="first-name" type="text" placeholder="Enter Your First Name" />
 
+              <label for="last-name">Last Name <span>*</span></label>
+              <input id="last-name" type="text" placeholder="Enter Your Last Name" />
+
+              <label for="phone-number">Phone number <span>*</span></label>
+              <input id="phone-number" type="tel" placeholder="US +1 (555) 000-0000" />
+
+              <label for="email">Email <span>*</span></label>
+              <input id="email" type="email" placeholder="olivia@untitledui.com" />
+            </div>
+
+            <div class="confirming-details">
+              <div class="confirming-flex">
+                <p>Date</p>
+                <span>Jan 1 | 08:00 - Jan 2 | 20:00</span>
+              </div>
+              <div class="confirming-flex">
+                <p>Location</p>
+                <span>Bratislava Bus... - Bratislava Bus...</span>
+              </div>
+              <div class="confirming-flex">
+                <p>Volkswagen Touareg</p>
+                <span>32,98 EUR</span>
+              </div>
+              <div class="confirming-flex">
+                <p>Basic Insurance</p>
+                <span>15 EUR</span>
+              </div>
+
+              <div class="total confirming-flex">
+                <p>Total</p>
+                <span>62,98 EUR</span>
+              </div>
+            </div>
+
+            <label class="accept">
+              <input type="checkbox" class="accept-checkbox" />
+              <span class="accept-svg"></span>
+              <span class="accept-text">I accept the terms & conditions</span>
+            </label>
+          </form>
+           <div class="payment-btns">
+              <button class="payment-btn inactive" type="button">Pay Cash</button>
+              <button class="payment-btn" type="button">Pay Now</button>
+            </div>
         </div>
       </div>
     </section>
-
 
     <section class="contact">
       <div class="contact-container">
