--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
               </div>
               <div class="insurance-item insurance-active">
                 <p class="insurance-p">Basic Insurance</p>
-                <h2 class="insurance-h2">15 EUR/day</h2>
+                <h2 class="insurance-h2">15 EUR/Day</h2>
                 <ul class="insurance-list">
                   <li class="insurance-li">
                     <svg width="16" height="16" style="flex-shrink: 0;">
@@ -359,7 +359,7 @@
               </div>
               <div class="insurance-item">
                 <p class="insurance-p">Comprehensive Insurance</p>
-                <h2 class="insurance-h2">25 EUR/day</h2>
+                <h2 class="insurance-h2">25 EUR/Day</h2>
                 <ul class="insurance-list">
                   <li class="insurance-li">
                     <svg width="16" height="16" style="flex-shrink: 0;">
@@ -402,11 +402,11 @@
               <label for="last-name">Last Name <span>*</span></label>
               <input id="last-name" type="text" placeholder="Enter Your Last Name" />
 
-              <label for="phone-number">Phone number <span>*</span></label>
-              <input id="phone-number" type="tel" placeholder="US +1 (555) 000-0000" />
-
               <label for="email">Email <span>*</span></label>
               <input id="email" type="email" placeholder="olivia@untitledui.com" />
+
+              <label for="phone-number">Phone number <span>*</span></label>
+              <input id="phone-number" type="tel" placeholder="US +1 (555) 000-0000" />
             </div>
 
             <div class="confirming-details">
@@ -441,7 +441,7 @@
           </form>
            <div class="payment-btns">
               <button class="payment-btn inactive" type="button">Pay Cash</button>
-              <button class="payment-btn" type="button">Pay Now</button>
+              <button class="payment-btn" type="button">Pay Card</button>
             </div>
         </div>
       </div>
